--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@
     float: center;
     font-weight: bold;
     font: white;
+    background: url(vic1.jpg);
+    ;
 }
 
 .h1 {
@@ -10,4 +12,71 @@
 
 .about {
     float: center;
+}
+
+.card12 {
+    float: left;
+}
+
+.card2 {
+    float: right;
+}
+
+.card3 {
+    float: right;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+/* Float three columns side by side */
+
+.column {
+    float: left;
+    width: 33%;
+    padding: 10px;
+}
+
+
+/* Remove extra left and right margins, due to padding in columns */
+
+.row {
+    margin: 0 -5px;
+}
+
+
+/* Clear floats after the columns */
+
+.row:after {
+    content: " ";
+    display: table;
+    clear: both;
+}
+
+
+/* Style the counter cards */
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    /* this adds the "card" effect */
+    padding: 16px;
+    text-align: center;
+    background-color: #bae097;
+}
+
+
+/* Responsive columns - one column layout (vertical) on small screens */
+
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
+    }
 }
