--- a/css/styles.css
+++ b/css/styles.css
@@ -39,9 +39,11 @@
     display: table-cell;
     border-left: 6px solid black;
     height: 200px;
-    left: 50%;
+    left: 40%;
     margin-left: 1000 px;
     top: 0;
+    background-color: black;
+    color: #548146;
 }
 
 
@@ -65,7 +67,7 @@ span {
     text-align: left;
 }
 
-p. {
+.p {
     float: center;
 }
 
@@ -108,4 +110,59 @@ hr {
 
 .bar>li:last-of-type:after {
     top: -50%;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+/* Float four columns side by side */
+
+.column {
+    float: left;
+    width: 25%;
+    padding: 0 10px;
+}
+
+
+/* Remove extra left and right margins, due to padding in columns */
+
+.row {
+    margin: 0 -5px;
+}
+
+
+/* Clear floats after the columns */
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+
+/* Style the counter cards */
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    /* this adds the "card" effect */
+    padding: 16px;
+    text-align: center;
+    background-color: #a5f58c;
+}
+
+
+/* Responsive columns - one column layout (vertical) on small screens */
+
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
+    }
 }
