--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,7 @@ body {
     float: left;
     width: 25%;
     padding: 0 10px;
+    color: black;
 }
 
 
@@ -143,6 +144,7 @@ body {
     content: "";
     display: table;
     clear: both;
+    color: black;
 }
 
 
@@ -154,6 +156,8 @@ body {
     padding: 16px;
     text-align: center;
     background-color: #548146;
+    color: black;
+    font: black;
 }
 
 
@@ -164,5 +168,10 @@ body {
         width: 100%;
         display: block;
         margin-bottom: 20px;
+        color: black;
     }
+}
+
+a. {
+    color: black;
 }
