--- a/css/styles.css
+++ b/css/styles.css
@@ -242,7 +242,6 @@ main#home {
 main#home h1 {
     margin-top: 20vh;
 }
-
 .about-info {
     display: grid;
     grid-gap: 30px;
@@ -252,12 +251,13 @@ main#home h1 {
 
 .about-info .bio-image {
     grid-area: bioimage;
+    
     margin: auto;
-    border-radius: 50%;
+    border-radius: 30%;
     border: #cea650 3px solid;
 }
 
-.about-info .bio {
+.about-info .{
     grid-area: bio;
     font-size: 1.5rem;
 }
@@ -290,7 +290,7 @@ main#home h1 {
 }
 
 .projects img {
-    width: 100%;
+  width:100%
     border: 3px #fff solid;
 }
 
