--- a/css/styles.css
+++ b/css/styles.css
@@ -245,11 +245,12 @@ main#home h1 {
 .about-info {
     display: grid;
     grid-gap: 30px;
-    grid-template-areas: 'bioimage bio bio' 'job1 job2 job3';
+    grid-template-areas: 'job1 job2 job3';
     grid-template-columns: repeat(3, 1fr);
 }
 
-.about-info .bio-image {
+.about-info,
+.bio-image {
     grid-area: bioimage;
     
     margin: auto;
