--- a/css/styles.css
+++ b/css/styles.css
@@ -255,7 +255,7 @@ main#home h1 {
     
     margin: auto;
     border-radius: 30%;
-    border: #cea650 3px solid;
+  
 }
 
 .about-info .{
@@ -265,7 +265,7 @@ main#home h1 {
 
 .about-info .job-1 {
     grid-area: job1;
-    text-align: justify;
+    text-align: center;
 }
 
 .about-info .job-2 {
